[package]
name = "fara"
description = "Find And Replace App — a fast and flexible command-line tool to search and replace text across files and folders."
repository = "https://github.com/ibilalkayy/fara"
version = "0.1.20"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["file", "search", "find", "replace"]
exclude = ["target/*"]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
dirs = "6.0.0"
regex = "1.11.1"
